appId: com.tihonshkel.x018BY
---
- runFlow:
    file: ../03-album-create/create-birthday-dfa34.yaml
- tapOn:
    id: page-card-3
- extendedWaitUntil:
    visible:
      id: unified-editor-save
    timeout: 15000
- tapOn:
    id: unified-editor-save
- extendedWaitUntil:
    visible:
      text: 'Предпросмотр'
    timeout: 20000
- back
- assertVisible:
    id: album-export-button
