appId: com.tihonshkel.x018BY
---
- runFlow:
    file: ../_helpers/guest-setup-to-home.yaml
- tapOn:
    id: tab-projects
- tapOn:
    id: project-category-holidays
- tapOn:
    id: cover-holiday_dfa34
- tapOn:
    id: cover-date-confirm
- tapOn:
    id: select-action-edit
- extendedWaitUntil:
    visible:
      text: 'Скачать альбом'
    timeout: 30000
- assertVisible:
    id: album-export-button
