appId: com.tihshkel.x018BY
---
- runFlow:
    file: ../_helpers/guest-setup-to-home.yaml
- tapOn:
    id: tab-projects
- tapOn:
    id: project-category-diary
- tapOn:
    id: cover-diary_dd1
- tapOn:
    id: select-action-edit
- tapOn:
    id: interior-diary_interior_purple
- tapOn:
    id: interior-continue
- extendedWaitUntil:
    visible:
      text: 'Скачать альбом'
    timeout: 45000
- assertVisible:
    id: album-export-button
- assertVisible:
    text: 'из 40 страниц'
